k8s/namespaces/security/keycloak/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: security
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/managed-by: flux
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: keycloak
  type: ClusterIP
