k8s/namespaces/security/keycloak/keycloak/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-keycloak-https
  namespace: security
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/managed-by: flux
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`keycloak.hosted.fail`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: ingress
      services:
        - name: keycloak
          port: 8080
  tls: 
    secretName: hosted-fail-tls
